fix: tabbar flicker

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -19,6 +19,7 @@ html.dark {
   // Dynamic Viewport Units
   height: 100dvh;
   position: relative;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
